<resources>
    <string name="app_name" translatable="false">Conversione</string>
    <string name="Pulsante">Convert</string>
    <string name="km">Kilometers</string>
    <string name="M">Miles</string>
    <string name="toM">Km -> Miles</string>
    <string name="toKm">Miles -> Km</string>
    <string name="Vuoto">Empty set</string>
    <item name="visible" type="id"/>
    <item name="masked" type="id"/>
    <string name="flash" translatable="false">Flash</string>
</resources>
